done on creating a starting screen for the game apps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">OneArmedBanditGame</string>
     <string name="roll">Roll</string>
     <string name="reset">Reset</string>
+    <string name="win_ratio">Win Ratio :</string>
     <string name="app_description">One Armed Bandit Game</string>
-    <string name="win_counts">Wins :  </string>
-    <string name="played_counts">Played : </string>
+    <string name="win_counts">Wins :</string>
+    <string name="played_counts">Played :</string>
 </resources>
